<resources>
    <string name="app_name">danangdulich</string>
    <string name="search_here">Search here...</string>
    <string name="rung_xanh">Rừng xanh</string>
    <string name="thoi_gian_mo_cua">Thời gian mở cửa:</string>
    <string name="price_in">Giá ra vào:</string>
    <string name="image">Ảnh</string>
    <string name="info">Thông tin</string>
    <string name="content_text">Nhập điểm đến</string>
    <string name="content_text2">Tại Đà Nẵng</string>
    <string name="recent">Gần đây</string>
    <string name="all">Tất cả</string>
    <string name="hot_place">Địa điểm thu hút</string>
</resources>